# signal-noise-screen2events

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: IR_BLASTER.md  for-data-teams.md  for-webdriver-developers.md  page-detection-guide.md  troubleshooting.md
examples/: android_config.yaml  appletv_config.yaml  athena_queries.sql  config.example.yaml  demo_events.jsonl  events.example.jsonl  lg_config.yaml  roku_config.yaml  s3_config.yaml  validate_demo.py  xumo_config.yaml
examples/example-outputs/: README.md  alignment.json  events.jsonl  findings.jsonl  observations.jsonl  report.md
examples/notebooks/: s3_quickstart.ipynb
src/screen2events/: __init__.py  cli.py  config.py  models.py  utils.py
src/screen2events/control/: ir.py  verify.py
src/screen2events/correlate/: align.py  anomalies.py  match.py
src/screen2events/events/: adapter_base.py  athena_adapter.py  file_adapter.py  normalize.py  opensearch_adapter.py  s3_adapter.py
src/screen2events/report/: evidence.py  render_md.py
src/screen2events/session_id/: resolve.py
src/screen2events/video/: capture.py  detectors.py  motion.py  ocr.py  state_machine.py
tests/: test_ir.py  test_match.py
