[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "screen2events"
version = "0.1.0"
description = "Signal & Noise: correlate user-visible screen states with application telemetry"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Dustin Braun"}]
keywords = ["observability", "testing", "telemetry", "computer-vision", "streaming"]
dependencies = [
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
video = [
  "opencv-python>=4.9",
  "pytesseract>=0.3.10",
]
opensearch = [
  "opensearch-py>=2.4",
]
ir = [
  "requests>=2.28",
]
aws = [
  "boto3>=1.34",
  "pyathena>=3.6",
  "opensearch-py>=2.4",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.8",
  "requests>=2.28",
]

[project.scripts]
s2e = "screen2events.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

